<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.calculator.CalculatorActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_calculator">

    <EditText
        android:id="@+id/operand_one_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_operand_one_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/operand_two_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_operand_two_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operand_one_edit_text" />

    <Button
        android:id="@+id/operation_add_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onAdd"
        android:text="@string/add_operation_text"
        app:layout_constraintEnd_toStartOf="@+id/operation_sub_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operand_two_edit_text" />

    <Button
        android:id="@+id/operation_sub_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/operation_add_btn"
        android:layout_toRightOf="@id/operation_add_btn"
        android:onClick="onSub"
        android:text="@string/sub_operation_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/operation_add_btn"
        app:layout_constraintTop_toBottomOf="@id/operand_two_edit_text" />

    <Button
        android:id="@+id/operation_div_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/operation_add_btn"
        android:onClick="onDiv"
        android:text="@string/div_operation_text"
        app:layout_constraintEnd_toStartOf="@+id/operation_mul_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operation_add_btn" />

    <Button
        android:id="@+id/operation_mul_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/operation_add_btn"
        android:layout_toEndOf="@id/operation_add_btn"
        android:layout_toRightOf="@id/operation_add_btn"
        android:onClick="onMul"
        android:text="@string/mul_operation_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/operation_div_btn"
        app:layout_constraintTop_toBottomOf="@id/operation_add_btn" />

    <Button
        android:id="@+id/operation_pow_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/operation_mul_btn"
        android:onClick="onPow"
        android:text="@string/pow_operation_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operation_div_btn" />

    <TextView
        android:id="@+id/operation_result_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operation_pow_btn" />

</android.support.constraint.ConstraintLayout>